Fixing the overflow for tables

--- a/panoramix/static/widgets/viz_pivot_table.css
+++ b/panoramix/static/widgets/viz_pivot_table.css
@@ -1,3 +1,3 @@
-li.widget.pivot_table div.slice_container {
-    overflow: auto;
+.gridster li.widget.pivot_table, div.widget.pivot_table{
+    overflow: auto; !important
 }
